--- a/main/src/main/res/values-es/pref_strings.xml
+++ b/main/src/main/res/values-es/pref_strings.xml
@@ -17,15 +17,36 @@
 <resources>
     <!-- Advanced widget preferences -->
     <string name="pref_clock_shortcut_title">Acceso directo al reloj</string>
+    <string name="pref_background_title">Fondo</string>
+    <string name="pref_foreground_color_title">Color principal</string>
+    <string name="pref_homescreen_title">Widget de la pantalla de inicio</string>
+    <string name="pref_lockscreen_title">Widget de la pantalla de bloqueo</string>
+    <string name="pref_background_opacity_title">Visibilidad del fondo</string>
+    <string-array name="pref_background_opacity_display_names">
+        <item>Completamente transparente</item>
+        <item>25% visible</item>
+        <item>50% visible</item>
+        <item>75% visible</item>
+        <item>Completamente opaco</item>
+    </string-array>
+    <string name="pref_foreground_color_description">Color del texto y los íconos</string>
     <string name="pref_aggressive_centering_title">Centrar siempre</string>
     <string name="pref_aggressive_centering_description">Puede hacer que el reloj cambie de posición en base a los estados del widget</string>
+    <string name="pref_settings_button_title">Botón de configuración</string>
+    <string-array name="pref_settings_button_display_names">
+        <item>Escondido</item>
+        <item>En el widget expandido</item>
+        <item>En el lanzador de aplicaciones</item>
+    </string-array>
+    <string name="pref_hide_clock_title">Ocultar reloj</string>
+    <string name="pref_hide_clock_description">Oculta el reloj y solo muestra las extensiones</string>
 
     <!-- Universal settings preferences -->
     <string name="pref_shortcut_title">Acceso directo</string>
-    <string name="pref_shortcut_default">(Predeterminada)</string>
+    <string name="pref_shortcut_default">(Predeterminado)</string>
 
     <!-- Weather -->
-    <string name="pref_weather_units_title">Unidades climáticas</string>
+    <string name="pref_weather_units_title">Unidad de medida del clima</string>
     <string-array name="pref_weather_units_display_names">
         <item>°F</item>
         <item>°C</item>
@@ -49,7 +70,7 @@
     </plurals>
 
     <!-- Calendar -->
-    <string name="pref_calendar_look_ahead_hours_title">Mostrar las citas próximas</string>
+    <string name="pref_calendar_look_ahead_hours_title">Mostrar las citas dentro de</string>
     <string-array name="pref_calendar_look_ahead_hours_display_names">
         <item>3 horas</item>
         <item>6 horas</item>
@@ -70,7 +91,7 @@
 
     <!-- Daydream preferences -->
     <string name="pref_daydream_color_title">Color de fondo</string>
-    <string name="pref_daydream_color_description">The color of text and icons in Daydream mode</string>
+    <string name="pref_daydream_color_description">Color del texto y los íconos en el modo Daydream</string>
     <string name="pref_daydream_night_mode_title">Modo noche</string>
     <string name="pref_daydream_night_mode_description">Pantalla muy oscura (para habitaciones con poca luz)</string>
     <string name="pref_daydream_animation_title">Animación</string>
